@@ -1,0 +1,5 @@
+from debian_bundle.deb822 import *
+
+# FIXME: Give a warning about path change.  Should we raise DeprecationWarning
+# (I vote no, since that will stop execution unless caught), or just print a
+# message to stderr?
