@@ -1,3 +1,5 @@
 README.changelog
 README.debtags
+README.deb822
 README
+HISTORY.deb822
