@@ -23,4 +23,5 @@ setup(name='python-debian',
       description='Debian package related modules',
       url='http://packages.qa.debian.org/p/python-debian.html',
       packages=['debian_bundle'],
+      py_modules=['deb822'],
      )
